# opentrig

./: .gitignore  NOTICE.txt  README.md
dac/src/: main.rs
hardware/: D_1610_4027Metric.kicad_mod  comparators.kicad_sch  dac.kicad_sch  debug.kicad_sch  digital.kicad_dru  digital.kicad_pcb  digital.kicad_pro  digital.kicad_sch  fpga.kicad_sch  mcu.kicad_sch  power.kicad_sch  power_sipm.kicad_sch  tps7a4701.kicad_sym  usb.kicad_sch
hardware/digital.pretty/: 1-1478204-0.stp  112659.stp  BNC_TEConnectivity_1478204_Vertical.kicad_mod  BWIPX-1-001E.kicad_mod  DOSIN-801-0078.kicad_mod  SMA_Amphenol_901-144_Vertical.kicad_mod  TestPoint_Keystone_5015_Micro_Mini.kicad_mod  microSD_HC_MSD-4-A.kicad_mod
hardware/fab/: digital-B_Cu.gbl  digital-B_Mask.gbs  digital-B_Paste.gbp  digital-B_Silkscreen.gbo  digital-Edge_Cuts.gm1  digital-F_Cu.gtl  digital-F_Mask.gts  digital-F_Paste.gtp  digital-F_Silkscreen.gto  digital-In1_Cu.g1  digital-In2_Cu.g2  digital-NPTH-drl_map.gbr  digital-NPTH.drl  digital-PTH-drl_map.gbr  digital-PTH.drl  digital-all-pos.csv  digital-job.gbrjob  digital.csv  digital.xml
hardware/logos.pretty/: opentrig.kicad_mod
opentrig/: Cargo.toml  justfile
opentrig/src/: dac.rs  data.rs  fpga.rs  main.rs
opentrig/src/fpga/: .gitignore  clk.v  latch.v  main.pcf  main.v  spi.v  sync.v  trigger.v
opentrig/src/fpga/pll/: pll_10mhz.v  pll_40mhz.v
tests/: Cargo.toml  justfile
tests/src/: main.rs
