[package]
name = "tests"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "tests"
test = false
bench = false

[dependencies]
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
critical-section = "1.1"
heapless = "0.8"
static_cell = "2.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0" }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.7.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

fixed = "1.23.1"
fixed-macro = "1.2"
pio = "0.3.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
